--- a/asha.html
+++ b/asha.html
@@ -3,7 +3,7 @@
 <head>
 <title>Asha</title>
 <meta cherset="utf-8" />
-<link rel="stylesheet" href="style.css" type="text/css">
+<link rel="stylesheet" href="css/style.css" type="text/css">
 <meta name="viewport" content="width=device-widdth, initial-scale=1.0">
 </head>
 <body class="body">
